# internal/server/grpc.go
@@ -12,7 +12,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, eas *service.EasService, easSalesPaper *service.EasSalesPaperService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, eas *service.EasService, easSalesPaper *service.EasSalesPaperService, easExaminee *service.EasExamineeService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -33,5 +33,6 @@ func NewGRPCServer(c *conf.Server, eas *service.EasService, easSalesPaper *servi
 	srv := grpc.NewServer(opts...)
 	v1.RegisterEasServiceServer(srv, eas)
 	v1.RegisterEasSalesPaperServiceServer(srv, easSalesPaper)
+	v1.RegisterEasExamineeServiceServer(srv, easExaminee)
 	return srv
 }
